# python-docker-compose-example

./: README.md  app.py  docker-compose.yaml  pyproject.toml
