[tool.poetry]
name = "python-docker-compose-example"
version = "0.1.0"
description = ""
authors = ["robinson.ramm.lovatto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
